<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BEDADD"
        tools:context=".detalle.DetalleActivity">

        <TextView
            android:id="@+id/nombre_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/LaBoquilla"
            android:textAlignment="center"
            android:textColor="#0277BD"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imagen_image_view"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_marginTop="24dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombre_text_view"
            app:srcCompat="@drawable/la_boquilla"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/labeldescrip_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/descripcion"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagen_image_view" />

        <TextView
            android:id="@+id/contenido_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/LaBoquillaDescripcion"
            android:textAlignment="textStart"
            android:textColor="#455A64"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labeldescrip_text_view" />

        <ImageView
            android:id="@+id/imgtemp_image_view"
            android:layout_width="107dp"
            android:layout_height="108dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.28"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contenido_text_view"
            app:srcCompat="@drawable/iconotemp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/temp_text_view"
            android:layout_width="89dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/temperatura"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@+id/imgtemp_image_view"
            app:layout_constraintTop_toBottomOf="@+id/contenido_text_view" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/botonregresarinicio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgtemp_image_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>